// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateHooks — #189: infinite query generation > snapshot: paginated list spec generates correct infinite hook output 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { queryOptions, useQuery, type UseQueryOptions, useInfiniteQuery, type UseInfiniteQueryOptions, type InfiniteData, type QueryKey, useMutation, type UseMutationOptions } from '@tanstack/react-query'
import { createPost, getPost, listPosts, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const postKeys = {
  all: () => ["posts"] as const,
  list: (params?: Parameters<typeof listPosts>[0]) => ["posts", 'list', params] as const,
  detail: (id: string) => ["posts", id] as const,
}

// ── Query options factories ──────────────────────────────────

export function listPostsQueryOptions(
  params?: Parameters<typeof listPosts>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listPosts>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof listPosts>>, ApiError>({
    queryKey: postKeys.list(params),
    queryFn: () => listPosts(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function getPostQueryOptions(
  id: string,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getPost>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof getPost>>, ApiError>({
    queryKey: postKeys.detail(id),
    queryFn: () => getPost(id),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

// ── Queries ──────────────────────────────────────────────────

export function useListPosts(
  params?: Parameters<typeof listPosts>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listPosts>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listPosts>>, ApiError>({
    queryKey: postKeys.list(params),
    queryFn: () => listPosts(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useListPostsInfinite(
  params?: Parameters<typeof listPosts>[0],
  options?: Omit<UseInfiniteQueryOptions<Awaited<ReturnType<typeof listPosts>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listPosts>>>, QueryKey, unknown>, 'queryKey' | 'queryFn' | 'getNextPageParam' | 'initialPageParam'>,
) {
  return useInfiniteQuery<Awaited<ReturnType<typeof listPosts>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listPosts>>>, QueryKey, unknown>({
    queryKey: [...postKeys.list(params), 'infinite'],
    queryFn: ({ pageParam }) => listPosts({ ...params, "cursor": pageParam as never }),
    initialPageParam: undefined,
    // Override getNextPageParam in options to enable actual pagination.
    getNextPageParam: () => undefined,
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useGetPost(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getPost>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getPost>>, ApiError>({
    queryKey: postKeys.detail(id!),
    queryFn: () => getPost(id!),
    staleTime: 0,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreatePost(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createPost>>, ApiError, Parameters<typeof createPost>[0]>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof createPost>>, ApiError, Parameters<typeof createPost>[0]>({
    mutationFn: (vars) => createPost(vars),
    ...options,
  })
}
"
`;

exports[`snapshot: full generated output > autoInvalidate: true — auto-invalidation wiring 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { queryOptions, useQuery, type UseQueryOptions, useInfiniteQuery, type UseInfiniteQueryOptions, type InfiniteData, type QueryKey, useMutation, type UseMutationOptions, useQueryClient } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ["tasks"] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ["tasks", 'list', params] as const,
  detail: (id: string) => ["tasks", id] as const,
}

// ── Query options factories ──────────────────────────────────

export function listTasksQueryOptions(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function getTaskQueryOptions(
  id: string,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useListTasksInfinite(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseInfiniteQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>, 'queryKey' | 'queryFn' | 'getNextPageParam' | 'initialPageParam'>,
) {
  return useInfiniteQuery<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>({
    queryKey: [...taskKeys.list(params), 'infinite'],
    queryFn: ({ pageParam }) => listTasks({ ...params, "page": pageParam as never }),
    initialPageParam: undefined,
    // Override getNextPageParam in options to enable actual pagination.
    getNextPageParam: () => undefined,
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 0,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    ...options,
    onSuccess: (...args) => {
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      options?.onSuccess?.(...args)
    },
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    ...options,
    onSuccess: (...args) => {
      const [, variables] = args
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      queryClient.invalidateQueries({ queryKey: taskKeys.detail(variables.id) })
      options?.onSuccess?.(...args)
    },
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    ...options,
    onSuccess: (...args) => {
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      options?.onSuccess?.(...args)
    },
  })
}
"
`;

exports[`snapshot: full generated output > autoInvalidate: true, suspense: true, overrides: { tasks: { staleTime: 60_000 } } — all features combined 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { queryOptions, useQuery, type UseQueryOptions, useSuspenseQuery, type UseSuspenseQueryOptions, useInfiniteQuery, type UseInfiniteQueryOptions, type InfiniteData, type QueryKey, useMutation, type UseMutationOptions, useQueryClient } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ["tasks"] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ["tasks", 'list', params] as const,
  detail: (id: string) => ["tasks", id] as const,
}

// ── Query options factories ──────────────────────────────────

export function listTasksQueryOptions(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

export function getTaskQueryOptions(
  id: string,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

export function useSuspenseListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseSuspenseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useSuspenseQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

export function useListTasksInfinite(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseInfiniteQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>, 'queryKey' | 'queryFn' | 'getNextPageParam' | 'initialPageParam'>,
) {
  return useInfiniteQuery<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>({
    queryKey: [...taskKeys.list(params), 'infinite'],
    queryFn: ({ pageParam }) => listTasks({ ...params, "page": pageParam as never }),
    initialPageParam: undefined,
    // Override getNextPageParam in options to enable actual pagination.
    getNextPageParam: () => undefined,
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 60000,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

export function useSuspenseGetTask(
  id: string,
  options?: Omit<UseSuspenseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useSuspenseQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 60000,
    gcTime: 300000,
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    ...options,
    onSuccess: (...args) => {
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      options?.onSuccess?.(...args)
    },
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    ...options,
    onSuccess: (...args) => {
      const [, variables] = args
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      queryClient.invalidateQueries({ queryKey: taskKeys.detail(variables.id) })
      options?.onSuccess?.(...args)
    },
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  const queryClient = useQueryClient()
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    ...options,
    onSuccess: (...args) => {
      queryClient.invalidateQueries({ queryKey: taskKeys.all() })
      options?.onSuccess?.(...args)
    },
  })
}
"
`;

exports[`snapshot: full generated output > default options (staleTime: 0, gcTime: 300_000) — baseline 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { queryOptions, useQuery, type UseQueryOptions, useInfiniteQuery, type UseInfiniteQueryOptions, type InfiniteData, type QueryKey, useMutation, type UseMutationOptions } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ["tasks"] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ["tasks", 'list', params] as const,
  detail: (id: string) => ["tasks", id] as const,
}

// ── Query options factories ──────────────────────────────────

export function listTasksQueryOptions(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function getTaskQueryOptions(
  id: string,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useListTasksInfinite(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseInfiniteQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>, 'queryKey' | 'queryFn' | 'getNextPageParam' | 'initialPageParam'>,
) {
  return useInfiniteQuery<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>({
    queryKey: [...taskKeys.list(params), 'infinite'],
    queryFn: ({ pageParam }) => listTasks({ ...params, "page": pageParam as never }),
    initialPageParam: undefined,
    // Override getNextPageParam in options to enable actual pagination.
    getNextPageParam: () => undefined,
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 0,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    ...options,
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    ...options,
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    ...options,
  })
}
"
`;

exports[`snapshot: full generated output > overrides: { tasks: { staleTime: 60_000, gcTime: 600_000 } } — per-resource timing 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { queryOptions, useQuery, type UseQueryOptions, useInfiniteQuery, type UseInfiniteQueryOptions, type InfiniteData, type QueryKey, useMutation, type UseMutationOptions } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ["tasks"] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ["tasks", 'list', params] as const,
  detail: (id: string) => ["tasks", id] as const,
}

// ── Query options factories ──────────────────────────────────

export function listTasksQueryOptions(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 60000,
    gcTime: 600000,
    ...options,
  })
}

export function getTaskQueryOptions(
  id: string,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 60000,
    gcTime: 600000,
    ...options,
  })
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 60000,
    gcTime: 600000,
    ...options,
  })
}

export function useListTasksInfinite(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseInfiniteQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>, 'queryKey' | 'queryFn' | 'getNextPageParam' | 'initialPageParam'>,
) {
  return useInfiniteQuery<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>({
    queryKey: [...taskKeys.list(params), 'infinite'],
    queryFn: ({ pageParam }) => listTasks({ ...params, "page": pageParam as never }),
    initialPageParam: undefined,
    // Override getNextPageParam in options to enable actual pagination.
    getNextPageParam: () => undefined,
    staleTime: 60000,
    gcTime: 600000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 60000,
    gcTime: 600000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    ...options,
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    ...options,
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    ...options,
  })
}
"
`;

exports[`snapshot: full generated output > suspense: true — suspense hook variants 1`] = `
"// This file is auto-generated by @codewithagents/openapi-react-query — do not edit

import { queryOptions, useQuery, type UseQueryOptions, useSuspenseQuery, type UseSuspenseQueryOptions, useInfiniteQuery, type UseInfiniteQueryOptions, type InfiniteData, type QueryKey, useMutation, type UseMutationOptions } from '@tanstack/react-query'
import { createTask, deleteTask, getTask, listTasks, updateTask, type ApiError } from './client.js'

// ── Query key factories ──────────────────────────────────────

export const taskKeys = {
  all: () => ["tasks"] as const,
  list: (params?: Parameters<typeof listTasks>[0]) => ["tasks", 'list', params] as const,
  detail: (id: string) => ["tasks", id] as const,
}

// ── Query options factories ──────────────────────────────────

export function listTasksQueryOptions(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function getTaskQueryOptions(
  id: string,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return queryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

// ── Queries ──────────────────────────────────────────────────

export function useListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useSuspenseListTasks(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseSuspenseQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useSuspenseQuery<Awaited<ReturnType<typeof listTasks>>, ApiError>({
    queryKey: taskKeys.list(params),
    queryFn: () => listTasks(params),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useListTasksInfinite(
  params?: Parameters<typeof listTasks>[0],
  options?: Omit<UseInfiniteQueryOptions<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>, 'queryKey' | 'queryFn' | 'getNextPageParam' | 'initialPageParam'>,
) {
  return useInfiniteQuery<Awaited<ReturnType<typeof listTasks>>, ApiError, InfiniteData<Awaited<ReturnType<typeof listTasks>>>, QueryKey, unknown>({
    queryKey: [...taskKeys.list(params), 'infinite'],
    queryFn: ({ pageParam }) => listTasks({ ...params, "page": pageParam as never }),
    initialPageParam: undefined,
    // Override getNextPageParam in options to enable actual pagination.
    getNextPageParam: () => undefined,
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

export function useGetTask(
  id: string | undefined | null,
  options?: Omit<UseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id!),
    queryFn: () => getTask(id!),
    staleTime: 0,
    gcTime: 300000,
    enabled: id != null && (options?.enabled ?? true),
    ...options,
  })
}

export function useSuspenseGetTask(
  id: string,
  options?: Omit<UseSuspenseQueryOptions<Awaited<ReturnType<typeof getTask>>, ApiError>, 'queryKey' | 'queryFn'>,
) {
  return useSuspenseQuery<Awaited<ReturnType<typeof getTask>>, ApiError>({
    queryKey: taskKeys.detail(id),
    queryFn: () => getTask(id),
    staleTime: 0,
    gcTime: 300000,
    ...options,
  })
}

// ── Mutations ────────────────────────────────────────────────

export function useCreateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof createTask>>, ApiError, Parameters<typeof createTask>[0]>({
    mutationFn: (vars) => createTask(vars),
    ...options,
  })
}

export function useUpdateTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof updateTask>>, ApiError, { id: string; body: Parameters<typeof updateTask>[1] }>({
    mutationFn: ({ id, body }) => updateTask(id, body),
    ...options,
  })
}

export function useDeleteTask(
  options?: Omit<UseMutationOptions<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>, 'mutationFn'>,
) {
  return useMutation<Awaited<ReturnType<typeof deleteTask>>, ApiError, string>({
    mutationFn: (id) => deleteTask(id),
    ...options,
  })
}
"
`;
